<resources>
    <!-- Facebook-->
    <string name="facebook_app_id">196626078212989</string>
    <string name="fb_login_protocol_scheme">fb196626078212989</string>
    <string name="internet_not_connected">您尚未連接 Internet</string>

    <string name="task">任務</string>
    <string name="diary">日記</string>
    <string name="share">社群</string>
    <string name="profile">個人</string>
    <!--Login-->
    <string name="facebook">Facebook</string>
    <string name="login_with_name">以 %s 登入</string>
    <string name="via_login">\u0020登入</string>
    <string name="google">Google</string>
    <string name="login_success">登入成功</string>
    <string name="login_slogan">Your Best Task Companion</string>
    <string name="login_via_unknown">Unknown</string>
    <string name="login_name_unknown">無名氏</string>
    <string name="app_name">LiTsap</string>
    <string name="action_settings">Settings</string>
    <string name="you_know_nothing">You know nothing</string>
    <!-- Task List-->
    <string name="task_create_one">點擊右下角新增任務吧!</string>
    <string name="await_todo">本日未執行</string>
    <string name="finished">本日已執行</string>
    <string name="mock_task">烹飪練習</string>
    <string name="mock_status">成為今天的前1%吧!</string>
    <string name="plenty_task_info">先完成手邊任務吧!</string>
    <string name="task_delete_info">確定刪除任務嗎?\n所有歷史足跡將隨之刪除。</string>
    <string name="task_delete_confirm">確定</string>
    <string name="task_delete_cancel">取消</string>
    <string name="task_delete">刪除 %s 任務</string>
    <!-- Task Create -->
    <string name="task_name">任務名稱:</string>
    <string name="create_task_hint">%d/12</string>
    <string name="set_module">任務細項:</string>
    <string name="task_end">截止日期:</string>
    <string name="task_count">目標單位:</string>
    <string name="create_task_explain">20 分鐘/單位 </string>
    <string name="task_category">選擇類別:</string>
    <string name="category_exercise">運動</string>
    <string name="category_wealth">財富</string>
    <string name="category_food">美食</string>
    <string name="category_study">學習</string>
    <string name="category_networking">社交</string>
    <string name="category_art">藝文</string>
    <string name="category_other">其他</string>
    <string name="plenty_module_info">最多 6 則細項</string>
    <string name="create_task">建立任務</string>
    <string name="create_task_success">成功建立 1 任務</string>
    <string name="create_module_success">成功建立 1 細項</string>
    <string name="something_miss">尚有未輸入項目</string>
    <string name="create_module_hint">%d/6</string>
    <string name="create_count_notice">執行次數無法超過十億次</string>
    <string name="create_mock_task">ex: 英文檢定</string>
    <string name="create_mock_module">ex: 聽力</string>
    <string name="create_no_name">無任務名稱</string>
    <string name="create_murmur">Murmur</string>
    <string name="create_first_history">建立一項任務，包含%d個細項\n加油加油!</string>
    <!-- Task Detail -->
    <string name="task_detail">任務詳情</string>
    <string name="task_choose">選擇執行細項:</string>
    <string name="task_workout_time">選擇執行單位:</string>
    <string name="task_module">細項執行狀況</string>
    <string name="task_plan">計畫執行 %d 單位\u0020→\u0020</string>
    <string name="task_achieve">已執行 %d 單位</string>
    <string name="task_go">開始任務</string>
    <string name="task_hint">還沒選擇執行時間呢...</string>
    <string name="mock_module">煎蛋</string>
    <string name="task_time">堅持 %d 分鐘</string>
    <string name="detail_chart_format">##0.0%</string>
    <!-- Task Workout -->
    <string name="completed_ahead">提前完成任務</string>
    <string name="workout_lower_than_section">堅持下去就是你的了</string>
    <string name="hint_write_something">寫點什麼...</string>
    <!-- Task Break -->
    <string name="start_ahead">提前繼續任務</string>
    <string name="break_hint">該休息上廁所囉!</string>
    <string name="ad">看則廣告有益身心健康~</string>
    <!-- Task Finish -->
    <string name="finish_no_footprint">"執行過程未留下任何訊息呢..."</string>
    <string name="get_point">領取任務經驗值</string>
    <string name="footprint">任務足跡</string>
    <string name="feedback">任務心得</string>
    <string name="mock_feedback">我覺得超棒的阿!有這個 app 讓我更快更集中在我的目標上。</string>
    <string name="finish_picture">留下影像</string>
    <string name="finish_point">本次積點</string>
    <string name="insert_text">插入圖片</string>
    <string name="feedback_hint">建議 100 字內</string>
    <string name="finish_leave_title">離開頁面</string>
    <string name="finish_leave_content">不領取經驗值直接離開嗎?</string>
    <string name="finish_congrats">已完成該任務目標總次數，真是太棒了!</string>
    <string name="finish_provider">studio.honidot.litsap.fileprovider</string>
    <string name="finish_content">還沒有編輯的內容。</string>
    <!-- Diary -->
    <string name="diary_no_data">本日未留下任何紀錄</string>
    <!-- Post -->
    <string name="post_no_data">還沒有任何成就任務</string>
    <string name="post_less_data">任務細項過少無法繪製雷達圖</string>
    <!-- Profile -->
    <string name="profile_default_name">Rachel</string>
    <string name="profile_mock_murmur">我都完成了你們呢？</string>
    <string name="profile_no_data">建立任務來找到共同目標的夥伴</string>
    <string name="profile_level">等級 %d</string>
    <string name="profile_experience">經驗值 %d</string>
    <string name="profile_experience2">經驗值 %d/%d</string>
    <string name="profile_level_information">還有 %d 個任務未執行，再努力一下吧？</string>
    <string name="profile_level_information_done">今天都完成了！棒！</string>
    <string name="profile_level_information_cry">目前尚未安排任務</string>
    <string name="profile_competition">夥伴動態</string>
    <string name="profile_complete">本週狀況</string>
    <string name="profile_calendar">個人紀錄</string>
    <string name="profile_update">更新</string>
    <string name="profile_achievement">成就勳章</string>
    <string name="profile_coming_soon">即將推出，敬請期待</string>
    <!-- Choose face -->
    <string name="dialog_choose_face">選擇頭像:</string>
    <!-- Date Pattern -->
    <string name="barchart_month_date">MMM dd</string>
    <string name="diary_record_time">HH : mm</string>
    <string name="post_record_date">MMM dd, yyyy</string>
    <string name="workout_count_down">%02d:%02d</string>
    <string name="detail_end_date">截止時間: yyyy 年 MM 月 dd 日</string>
    <string name="diary_record_date">dd/MM/yyyy</string>
    <string name="diary_select_date">d/M/yyyy</string>
</resources>
