<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="studio.honidot.litsap.task.finish.FinishViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream">


        <ImageView
            android:id="@+id/task_logo_big"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:taskCategory="@{viewModel.workout.taskCategoryId}"
            tools:background="@drawable/category_food" />

        <TextView
            android:id="@+id/text_workout_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@{viewModel.workout.taskName}"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/task_logo_big"
            app:layout_constraintStart_toEndOf="@+id/task_logo_big"
            app:layout_constraintTop_toTopOf="@+id/task_logo_big"
            tools:text="@string/mock_task" />

        <ImageView
            android:id="@+id/task_logo_medium"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/task_logo_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/task_logo_big"
            app:taskCategory="@{viewModel.workout.taskCategoryId}"
            tools:background="@drawable/category_food" />

        <TextView
            android:id="@+id/text_workout_module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@{viewModel.workout.moduleName}"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_workout_task"
            app:layout_constraintEnd_toStartOf="@+id/task_logo_medium"
            tools:text="@string/mock_module" />

        <TextView
            android:id="@+id/text_footprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/footprint"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/task_logo_big"
            app:layout_constraintTop_toBottomOf="@+id/task_logo_big" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constriant_footprint"
            android:layout_width="0dp"
            android:layout_height="145dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profile_round_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_footprint"
            app:layout_constraintTop_toBottomOf="@+id/text_footprint">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_footprint"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:footprints="@{viewModel.workout}"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/recycler_footprint"
                app:srcCompat="@drawable/footprint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/finish_point"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/task_logo_big"
            app:layout_constraintTop_toBottomOf="@+id/constriant_footprint" />

        <TextView
            android:id="@+id/text_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/feedback"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/task_logo_big"
            app:layout_constraintTop_toBottomOf="@+id/text_point" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profile_round_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_feedback"
            app:layout_constraintTop_toBottomOf="@+id/text_feedback">

            <EditText
                android:id="@+id/task_finish_thought"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/tag_button"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:lines="15"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:singleLine="false"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:lines="15" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gallery" />

            <TextView
                android:id="@+id/text_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:text="@string/insert_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_finish"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/get_point"
            android:onClick="@{()->viewModel.navigateToProfile()}"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_experience"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/create_task_round_editor"
            android:textColor="@color/honey"
            tools:text="12 xp"
            android:textStyle="bold"
            app:receiveExperience="@{viewModel.workout.achieveSectionCount}"
            app:layout_constraintBottom_toBottomOf="@+id/text_point"
            app:layout_constraintStart_toEndOf="@+id/text_point"
            app:layout_constraintTop_toTopOf="@+id/text_point" />

        <ImageView
            android:id="@+id/image_star"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="4dp"
            android:visibility="@{viewModel.workout.achieveSectionCount>0? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/text_experience"
            app:layout_constraintStart_toEndOf="@+id/text_experience"
            app:layout_constraintTop_toTopOf="@+id/text_experience"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/image_star2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:visibility="@{viewModel.workout.achieveSectionCount>1? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/text_experience"
            app:layout_constraintStart_toEndOf="@+id/image_star"
            app:layout_constraintTop_toTopOf="@+id/text_experience"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/image_star3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:visibility="@{viewModel.workout.achieveSectionCount>2? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/text_experience"
            app:layout_constraintStart_toEndOf="@+id/image_star2"
            app:layout_constraintTop_toTopOf="@+id/text_experience"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/image_star4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:visibility="@{viewModel.workout.achieveSectionCount>3? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/text_experience"
            app:layout_constraintStart_toEndOf="@+id/image_star3"
            app:layout_constraintTop_toTopOf="@+id/text_experience"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/image_star5"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="4dp"
            android:visibility="@{viewModel.workout.achieveSectionCount>4? View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/text_experience"
            app:layout_constraintStart_toEndOf="@+id/image_star4"
            app:layout_constraintTop_toTopOf="@+id/text_experience"
            app:srcCompat="@drawable/star" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>