<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="studio.honidot.litsap.task.workout.WorkoutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{viewModel.isCountingRest==true?@color/white:@color/royal}"
        tools:background="@color/royal">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.leaveWorkout()}"
            android:tint="@color/mustard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/return_back" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/image_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_back">

            <TextView
                android:id="@+id/text_workout_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:text="@{viewModel.workout.taskName}"
                android:textAlignment="textEnd"
                android:textColor="@{viewModel.isCountingRest==true? @color/black : @color/white}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/task_logo_medium"
                app:layout_constraintEnd_toStartOf="@+id/task_logo_medium"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/task_logo_medium"
                tools:text="@string/mock_task" />

            <ImageView
                android:id="@+id/task_logo_medium"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_workout_module"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_workout_task"
                app:layout_constraintTop_toTopOf="parent"
                app:taskCategory="@{viewModel.workout.taskCategoryId}"
                tools:background="@drawable/category_food" />

            <TextView
                android:id="@+id/text_workout_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:text="@{viewModel.workout.moduleName}"
                android:textAlignment="textStart"
                android:textColor="@{viewModel.isCountingRest==true? @color/black : @color/white}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/task_logo_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/task_logo_medium"
                app:layout_constraintTop_toTopOf="@+id/task_logo_medium"
                tools:text="@string/mock_task" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/countdown_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="4dp"
            android:indeterminate="false"
            android:max="@{viewModel.isCountingRest==true? viewModel.workout.breakTimeConstant :viewModel.workout.displayProcess}"
            android:progress="@{viewModel.isCountingRest==true? (viewModel.workout.breakTimeConstant-viewModel.totalRestRemained) :viewModel.workout.displayProcess-viewModel.totalTaskRemained}"
            android:progressDrawable="@drawable/circular_progress"
            android:secondaryProgress="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_title"
            tools:progress="50" />

        <ImageView
            android:id="@+id/pause_play"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:background="@{viewModel.isCountingTask? @drawable/pause : @drawable/play}"
            android:backgroundTint="@color/yale"
            android:onClick="@{()->viewModel.pausePlayTimer()}"
            android:visibility="@{viewModel.isCountingRest==true? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/countdown_bar"
            app:layout_constraintStart_toStartOf="@+id/countdown_bar"
            app:layout_constraintTop_toBottomOf="@+id/remain_time"
            tools:background="@drawable/pause" />

        <TextView
            android:id="@+id/remain_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:textColor="@{viewModel.isCountingRest==true? @color/black : @color/white}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:countDownTime="@{viewModel.isCountingRest==true? viewModel.totalRestRemained : viewModel.totalTaskRemained}"
            app:layout_constraintBottom_toBottomOf="@+id/countdown_bar"
            app:layout_constraintEnd_toEndOf="@+id/countdown_bar"
            app:layout_constraintStart_toStartOf="@+id/countdown_bar"
            app:layout_constraintTop_toTopOf="@+id/countdown_bar"
            tools:text="18:23" />

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/break_hint"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{viewModel.isCountingRest==true? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="@+id/countdown_bar"
            app:layout_constraintStart_toStartOf="@+id/countdown_bar"
            app:layout_constraintTop_toBottomOf="@+id/remain_time" />

        <TextView
            android:id="@+id/text_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@string/ad"
            android:visibility="@{viewModel.isCountingRest==true? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/constraint_ad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_ad"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@color/mustard"
            android:visibility="@{viewModel.isCountingRest==true? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/button_finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!--com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" /-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_finish"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_button"
            android:enabled="@{(viewModel.workout.displayProcess-viewModel.totalTaskRemained)>=viewModel.workout.sectionConstant ? true:false}"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:onClick="@{()->viewModel.navigateToFinish()}"
            android:text="@string/completed_ahead"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/workout_talk_editor"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/hint_write_something"
            android:imeOptions="actionDone"
            android:letterSpacing="0.15"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@={viewModel.newMessage}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:visibility="@{viewModel.isCountingRest==true? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/button_finish"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/text_ad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countdown_bar"
            app:layout_constraintVertical_bias="0.0"
            app:messages="@{viewModel.messageList}" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>